开发架构说明

--- a/doc/开发架构.md
+++ b/doc/开发架构.md
@@ -13,21 +13,21 @@ html, css, js
 ## 2. 开发框架
 
 ### 2.1 后端开发框架
-Spring+SpringMVC+Mybatis(Hive)
+Spring+SpringMVC+Mybatis(Hive)<br>
 
-SSM（Spring+SpringMVC+Mybatis），目前较为主流的企业级架构方案。
-标准的MVC设计模式，将整个系统划分为View层、Controller层、Service层、Dao层四层，
-使用SpringMVC负责请求的转发和视图管理，
-Spring实现业务对象管理,
+SSM（Spring+SpringMVC+Mybatis），目前较为主流的企业级架构方案。<br>
+标准的MVC设计模式，将整个系统划分为View层、Controller层、Service层、Dao层四层，<br>
+使用SpringMVC负责请求的转发和视图管理，<br>
+Spring实现业务对象管理,<br>
 MyBatis和Hive作为数据对象持久化引擎。
 
 ### 2.2 定时任务
 采用springframework.scheduling.quartz
 
 ### 2.3 异步任务
-org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor
-采用线程池的方式，
-不需要返回值的异步任务实现Runnable接口，扔到线程池；
+org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor<br>
+采用线程池的方式，<br>
+不需要返回值的异步任务实现Runnable接口，扔到线程池；<br>
 需要返回值的任务实现Callable接口，扔到线程池，通过Future.get()获取返回结果；
 
 ### 2.4 大数据离线任务
@@ -37,8 +37,8 @@ Hive On Spark
 __ecust.shgas.controller__
 负责具体的业务模块流程的控制,在此层里面要调用Service层的接口来控制业务流程
 __ecust.shgas.service__
-Service层主要负责业务模块的逻辑应用设计;
-Service层的业务实现，具体要调用到已定义的Dao层的接口，
+Service层主要负责业务模块的逻辑应用设计;<br>
+Service层的业务实现，具体要调用到已定义的Dao层的接口，<br>
 封装Service层的业务逻辑有利于通用的业务逻辑的独立性和重复利用性
 __ecust.shgas.dao.mysql__
 Dao层主要是做数据持久层的工作，负责与Mysql数据库进行联络的一些任务。
@@ -61,9 +61,9 @@ IntelliJ IDEA
 使用Maven作为项目管理，包依赖以及自动构建工具
 
 ### 3.2 服务器
-网络服务器: Linux
-Web服务器: Tomcat
-Servlet容器: Tomcat
+网络服务器: Linux<br>
+Web服务器: Tomcat<br>
+Servlet容器: Tomcat<br>
  
 ### 3.2 版本控制
 Git
@@ -73,6 +73,6 @@ Git
 Markdown
 
 ## 4.数据存储
-小规模数据存储于MySQL
-大规模数据存储于Hive
+小规模数据存储于MySQL<br>
+大规模数据存储于Hive<br>
 Hive的MetaData存储于MySQL,同时对大规模数据量Hive计算后，将生成的数据存储于MySQL
