--- a/doc/开发架构.md
+++ b/doc/开发架构.md
@@ -35,29 +35,29 @@ Hive On Spark
 
 ### 2.5 包结构
 
-__ecust.shgas.controller__
+*  ecust.shgas.controller
 
 负责具体的业务模块流程的控制,在此层里面要调用Service层的接口来控制业务流程
 
-__ecust.shgas.service__
+*  ecust.shgas.service
 
 Service层主要负责业务模块的逻辑应用设计;<br>
 Service层的业务实现，具体要调用到已定义的Dao层的接口，<br>
 封装Service层的业务逻辑有利于通用的业务逻辑的独立性和重复利用性
 
-__ecust.shgas.dao.mysql__
+*  ecust.shgas.dao.mysql
 
 Dao层主要是做数据持久层的工作，负责与Mysql数据库进行联络的一些任务。
 
-__ecust.shgas.dao.hive__
+*  ecust.shgas.dao.hive
 
 Dao层主要是做数据持久层的工作，负责与Hive进行联络的一些任务。
 
-__ecust.shgas.domain__
+*  ecust.shgas.domain
 
 业务模型对象的
 
-__ecust.shgas.task__
+*  ecust.shgas.task
 定时任务和异步任务
 
 
