--- a/doc/开发架构.md
+++ b/doc/开发架构.md
@@ -37,28 +37,28 @@ Hive On Spark
 
 *  ecust.shgas.controller
 
-负责具体的业务模块流程的控制,在此层里面要调用Service层的接口来控制业务流程
+> 负责具体的业务模块流程的控制,在此层里面要调用Service层的接口来控制业务流程
 
 *  ecust.shgas.service
 
-Service层主要负责业务模块的逻辑应用设计;<br>
+> Service层主要负责业务模块的逻辑应用设计;<br>
 Service层的业务实现，具体要调用到已定义的Dao层的接口，<br>
 封装Service层的业务逻辑有利于通用的业务逻辑的独立性和重复利用性
 
 *  ecust.shgas.dao.mysql
 
-Dao层主要是做数据持久层的工作，负责与Mysql数据库进行联络的一些任务。
+> Dao层主要是做数据持久层的工作，负责与Mysql数据库进行联络的一些任务。
 
 *  ecust.shgas.dao.hive
 
-Dao层主要是做数据持久层的工作，负责与Hive进行联络的一些任务。
+> Dao层主要是做数据持久层的工作，负责与Hive进行联络的一些任务。
 
 *  ecust.shgas.domain
 
-业务模型对象的
+> 业务模型对象的定义
 
 *  ecust.shgas.task
-定时任务和异步任务
+> 定时任务和异步任务
 
 
 ### 2.2 前端开发框架
