地暖用户用气信息抓取

--- a/doc/燃气表结构.md
+++ b/doc/燃气表结构.md
@@ -440,3 +440,21 @@ XXXXX
 ```
 
 ```
+
+## 10 地暖用户用气信息抓取
+
+* __SQL__
+```
+  select yh.s_cid, name,i_quyubh, address, w.wordscontent area, time, year, month, dinuan, usage
+  from
+  (
+      (select s_cid, s_hm name, s_dz address, i_quyubh, I_DINUAN dinuan from kg_yonghuxx where I_DINUAN = 1) yh
+      left join
+      (
+      select s_cid, i_jlzt, i_zhangwuny time, substr(i_zhangwuny,1,4) year,  substr(i_zhangwuny,5,6) month, i_xiaofeil usage from cb_chaobiaosj
+      where i_jlzt=0 and i_zhangwuny is not null
+      ) cb
+      on yh.s_cid = cb.s_cid
+  )
+  left join s_words w on to_char(i_quyubh)=w.wordsvalue and w.belongid=1103 and w.wordsvalue is null;
+```
