项目架构图

--- a/doc/开发架构.md
+++ b/doc/开发架构.md
@@ -87,3 +87,6 @@ Markdown
 小规模数据存储于MySQL<br>
 大规模数据存储于Hive<br>
 Hive的MetaData存储于MySQL,同时对大规模数据量Hive计算后，将生成的数据存储于MySQL
+
+## 5. 项目架构图
+![image](../src/main/webapp/resources/images/Architecture.png "项目架构")
